// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmailIntegrationCreateVerification/> render() should render instructions for the base email integration 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations/email"
          >
            Email
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          my integration
           
          <span
            className="text-faded"
          >
            myintegration@emails.gorgias.com
          </span>
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <h1>
      <i
        className="material-icons"
      />
      Verification in progress...
    </h1>
    <div>
      <Alert
        className="mb-4"
        closeAriaLabel="Close"
        color="warning"
        fade={true}
        isOpen={true}
        tag="div"
        transition={
          Object {
            "appear": true,
            "baseClass": "fade",
            "baseClassActive": "show",
            "enter": true,
            "exit": true,
            "in": true,
            "mountOnEnter": false,
            "onEnter": [Function],
            "onEntered": [Function],
            "onEntering": [Function],
            "onExit": [Function],
            "onExited": [Function],
            "onExiting": [Function],
            "tag": "div",
            "timeout": 150,
            "unmountOnExit": true,
          }
        }
      >
        In order to verify your base email integration, you need to verify your own email address. Please check your inbox, you should have received a verification email from us. If you did not, you can re-send this email by
         
        <Button
          className="p-0"
          color="link"
          style={
            Object {
              "verticalAlign": "initial",
            }
          }
          tag="button"
        >
          clicking here
        </Button>
        .
      </Alert>
    </div>
  </Container>
</div>
`;

exports[`<EmailIntegrationCreateVerification/> render() should render the regular instructions 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations/email"
          >
            Email
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          my integration
           
          <span
            className="text-faded"
          >
            myintegration@gorgias.io
          </span>
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <h1>
      <i
        className="material-icons"
      />
      Verification in progress...
    </h1>
    <div>
      <Alert
        className="mb-4"
        closeAriaLabel="Close"
        color="info"
        fade={true}
        isOpen={true}
        tag="div"
        transition={
          Object {
            "appear": true,
            "baseClass": "fade",
            "baseClassActive": "show",
            "enter": true,
            "exit": true,
            "in": true,
            "mountOnEnter": false,
            "onEnter": [Function],
            "onEntered": [Function],
            "onEntering": [Function],
            "onExit": [Function],
            "onExited": [Function],
            "onExiting": [Function],
            "tag": "div",
            "timeout": 150,
            "unmountOnExit": true,
          }
        }
      >
        <i
          className="material-icons md-spin mr-2"
        >
          autorenew
        </i>
        We're waiting to receive your verification email on
         
        <strong>
          hmq29fh29zfmh29fzq2f3@emails-acme.gorgi.us
        </strong>
        .
      </Alert>
      <p>
        If you haven't set up the forwarding yet, you'll find the instructions
         
        <Link
          to="/app/settings/integrations/email/1/forwarding"
        >
          there
        </Link>
        .
        <br />
        If you have setup forwarding after having received the verification email, click on the button below to re-send it.
      </p>
      <Button
        className=""
        color="secondary"
        disabled={false}
        onClick={[Function]}
        tag="button"
        type="button"
      >
        <i
          className="material-icons"
        >
          mail
        </i>
         Re-send verification email
      </Button>
      <ConfirmButton
        className="float-right"
        color="secondary"
        confirm={[Function]}
        content="Are you sure you want to delete this integration? All associated views and rules will be disabled."
        disabled={false}
      >
        <i
          className="material-icons mr-1 text-danger"
        >
          delete
        </i>
        Delete email address
      </ConfirmButton>
    </div>
  </Container>
</div>
`;
